continuous fixing adaptive layout issues

--- a/style.css
+++ b/style.css
@@ -98,13 +98,13 @@
     }
     
     .main_slides_portfolio_slide:nth-child(3) img:first-child {
-        height: calc(2000px/7);
-        width: calc(3000px/7);
+        height: calc(2000px/5);
+        width: calc(3000px/5);
     }
     
     .main_slides_portfolio_slide:nth-child(3) img:last-child {
-        height: calc(2000px/7);
-        width: calc(3000px/7);
+        height: calc(2000px/5);
+        width: calc(3000px/5);
     }
     
     button {
@@ -211,14 +211,14 @@
             height: 24vh;
             margin: 30px 0 10px 0;
         }
-        .main_slides_portfolio_slide img:first-child {
+        /* .main_slides_portfolio_slide img:first-child {
             height: 14vh;
             width: 43vw;
         }
         .main_slides_portfolio_slide img:last-child {
             height: 13vh;
             width: 36vw;
-        }
+        } */
         button {
             padding: 13px;
         }
@@ -235,29 +235,54 @@
             padding: 12px;
             font-size: 0.5em;
         }
+        .main_slides_portfolio_slide:first-child img:last-child {
+            height: calc(2000px/20);
+            width: calc(3000px/20);
+        }
+        .main_slides_portfolio_slide:nth-child(3) img:first-child {
+            height: calc(2000px/20);
+            width: calc(3000px/20);
+        }
+        .main_slides_portfolio_slide:nth-child(3) img:last-child {
+            height: calc(2000px/20);
+            width: calc(3000px/20);
+        }
+        .main_slides_portfolio_slide img {
+            width: calc(2000px/17);
+            height: calc(3000px/17);
+        }
+        .main_slides_portfolio_slide:first-child img,
+        .main_slides_portfolio_slide:nth-child(2) img,
+        .main_slides_portfolio_slide:nth-child(3) img {
+            margin-left: 0px;
+        }
     }
     
-    @media (max-width: 450px) and (max-height: 500px) {
+    @media (max-width: 450px) and (min-height: 750px) {
         .main_slides_portfolio_slide {
             flex-direction: column;
         }
         h1 {
-            font-size: 15px !important;
+            font-size: 0.9em !important;
         }
         h2 {
             font-size: 10px !important;
         }
         .main_slides_portfolio_slide img {
-            width: 23vw;
-            height: 30vh;
+            width: calc(2000px/14);
+            height: calc(3000px/14);
         }
-        .main_slides_portfolio_slide img:first-child {
-            height: 23vh;
-            width: 41vw;
+        .main_slides_portfolio_slide:first-child img:last-child {
+            height: calc(2000px/20);
+            width: calc(3000px/20);
         }
-        .main_slides_portfolio_slide img:last-child {
-            height: 20vh;
-            width: 36vw;
+        .main_slides_portfolio_slide:nth-child(3) img:first-child {
+            height: calc(2000px/20);
+            width: calc(3000px/20);
+        }
+        .main_slides_portfolio_slide:nth-child(3) img:last-child {
+            height: calc(2000px/20);
+            width: calc(3000px/20);
         }
     }
     
